--- a/fields/6.2.25/SettingSuperMgmt.json
+++ b/fields/6.2.25/SettingSuperMgmt.json
@@ -41,7 +41,10 @@
   "live_updates": "disabled|live|auto",
   "minimum_usable_hd_space": "[\\d]+",
   "minimum_usable_sd_space": "[\\d]+",
+  "multiple_sites_enabled": "true|false",
   "override_inform_host": "true|false",
+  "override_inform_host_location": "",
+  "override_inform_host_type": "unifi-os|custom",
   "store_enabled": "disabled|super-only|everyone",
   "time_series_per_client_stats_enabled": "true|false",
   "x_ssh_password": "",
