--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,8 @@ jobs:
       - uses: "actions/setup-go@v2"
         with:
           go-version: "${{ env.GO_VERSION }}"
+      - run: "go get golang.org/x/tools/cmd/stringer"
+
       - run: "go generate ./..."
       - run: "git diff --compact-summary --exit-code"
 
