--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,24 +7,14 @@ on:
     tags:
       - "v*"
 
-env:
-  GO_VERSION: "1.16"
-
 jobs:
   build:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v3.3.0"
-      - uses: "actions/cache@v3"
-        with:
-          path: "~/go/pkg/mod"
-          key: "${{ runner.os }}-gomod-${{ hashFiles('**/go.sum') }}"
-          restore-keys: |
-            ${{ runner.os }}-gomod-
-
       - uses: "actions/setup-go@v3"
         with:
-          go-version: "${{ env.GO_VERSION }}"
+          cache: true
       - run: "go build ./..."
 
   generate:
@@ -32,17 +22,10 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v3.3.0"
-      - uses: "actions/cache@v3"
-        with:
-          path: "~/go/pkg/mod"
-          key: "${{ runner.os }}-gomod-${{ hashFiles('**/go.sum') }}"
-          restore-keys: |
-            ${{ runner.os }}-gomod-
 
       - uses: "actions/setup-go@v3"
         with:
-          go-version: "${{ env.GO_VERSION }}"
-      - run: "go install golang.org/x/tools/cmd/stringer"
+          cache: true
 
       - run: "go generate unifi/device.go"
       - run: "git diff --compact-summary --exit-code"
@@ -51,14 +34,10 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v3.3.0"
-      - uses: "actions/cache@v3"
-        with:
-          path: "~/go/pkg/mod"
-          key: "${{ runner.os }}-gomod-${{ hashFiles('**/go.sum') }}"
 
       - uses: "actions/setup-go@v3"
         with:
-          go-version: "${{ env.GO_VERSION }}"
+          cache: true
       - run: "go get ./..."
       - uses: "golangci/golangci-lint-action@v3"
 
@@ -67,12 +46,7 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v3.3.0"
-      - uses: "actions/cache@v3"
-        with:
-          path: "~/go/pkg/mod"
-          key: "${{ runner.os }}-gomod-${{ hashFiles('**/go.sum') }}"
-
       - uses: "actions/setup-go@v3"
         with:
-          go-version: "${{ env.GO_VERSION }}"
+          cache: true
       - run: "go test ./..."
