--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -4,24 +4,15 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch: {}
 
-env:
-  GO_VERSION: "^1.16"
-
 jobs:
   fields:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/setup-go@v3"
         with:
-          go-version: "${{ env.GO_VERSION }}"
+          cache: true
 
       - uses: "actions/checkout@v3.3.0"
-      - uses: "actions/cache@v3"
-        with:
-          path: "~/go/pkg/mod"
-          key: "${{ runner.os }}-gomod-${{ hashFiles('**/go.sum') }}"
-          restore-keys: |
-            ${{ runner.os }}-gomod-
 
       # TODO: Automatically merge the PR if tests pass.
       - run: "go generate unifi/fields.go"
