--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,6 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v3.3.0"
-
       - uses: "actions/setup-go@v3"
         with:
           cache: true
@@ -34,12 +33,12 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v3.3.0"
-
       - uses: "actions/setup-go@v3"
         with:
           cache: true
-      - run: "go get ./..."
       - uses: "golangci/golangci-lint-action@v3"
+        with:
+          skip-pkg-cache: true
 
   test:
     needs: "build"
