Pass `GITHUB_TOKEN` to `goreleaser`

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,3 +15,5 @@ jobs:
       - uses: 'goreleaser/goreleaser-action@v4'
         with:
           args: 'release'
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
