--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - uses: "actions/setup-go@v3"
         with:
+          go-version-file: "go.mod"
           cache: true
 
       - uses: "actions/checkout@v3.3.0"
