--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,3 +41,9 @@ jobs:
       - uses: "actions/checkout@v3.3.0"
       - uses: "actions/setup-go@v4"
       - run: "go test ./..."
+
+  yamllint:
+    runs-on: "ubuntu-latest"
+    steps:
+      - uses: "actions/checkout@v3.3.0"
+      - uses: "ibiqlik/action-yamllint@v3"
