--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,47 +3,47 @@ on:
   pull_request: {}
   push:
     branches:
-      - "main"
+      - 'main'
     tags:
-      - "v*"
+      - 'v*'
 
 jobs:
   build:
-    runs-on: "ubuntu-latest"
+    runs-on: 'ubuntu-latest'
     steps:
-      - uses: "actions/checkout@v3.3.0"
-      - uses: "actions/setup-go@v4"
-      - run: "go build ./..."
+      - uses: 'actions/checkout@v3.3.0'
+      - uses: 'actions/setup-go@v4'
+      - run: 'go build ./...'
 
   generate:
-    needs: "build"
-    runs-on: "ubuntu-latest"
+    needs: 'build'
+    runs-on: 'ubuntu-latest'
     steps:
-      - uses: "actions/checkout@v3.3.0"
-      - uses: "actions/setup-go@v4"
+      - uses: 'actions/checkout@v3.3.0'
+      - uses: 'actions/setup-go@v4'
 
-      - run: "go generate unifi/device.go"
-      - run: "git diff --compact-summary --exit-code"
+      - run: 'go generate unifi/device.go'
+      - run: 'git diff --compact-summary --exit-code'
 
   lint:
-    runs-on: "ubuntu-latest"
+    runs-on: 'ubuntu-latest'
     steps:
-      - uses: "actions/checkout@v3.3.0"
-      - uses: "actions/setup-go@v4"
-      - uses: "golangci/golangci-lint-action@v3"
+      - uses: 'actions/checkout@v3.3.0'
+      - uses: 'actions/setup-go@v4'
+      - uses: 'golangci/golangci-lint-action@v3'
         with:
           skip-pkg-cache: true
 
   test:
-    needs: "build"
-    runs-on: "ubuntu-latest"
+    needs: 'build'
+    runs-on: 'ubuntu-latest'
     steps:
-      - uses: "actions/checkout@v3.3.0"
-      - uses: "actions/setup-go@v4"
-      - run: "go test ./..."
+      - uses: 'actions/checkout@v3.3.0'
+      - uses: 'actions/setup-go@v4'
+      - run: 'go test ./...'
 
   yamllint:
-    runs-on: "ubuntu-latest"
+    runs-on: 'ubuntu-latest'
     steps:
-      - uses: "actions/checkout@v3.3.0"
-      - uses: "ibiqlik/action-yamllint@v3"
+      - uses: 'actions/checkout@v3.3.0'
+      - uses: 'ibiqlik/action-yamllint@v3'
