Make `golangci-lint` more strict

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,21 +1,44 @@
 ---
 linters:
-  disable-all: true
-  enable:
+  enable-all: true
+  disable:
+    - 'depguard'
+    - 'tagliatelle'
+
+    # Temporary
+    - 'cyclop'
+    - 'dupl'
+    - 'exhaustruct'
+    - 'forbidigo'
+    - 'funlen'
+    - 'gochecknoglobals'
+    - 'gocognit'
+    - 'goconst'
+    - 'gocritic'
+    - 'gocyclo'
+    - 'godox'
+    - 'goerr113'
+    - 'gomnd'
+    - 'gosec'
+    - 'lll'
+    - 'maintidx'
+    - 'nestif'
+    - 'nlreturn'
+    - 'paralleltest'
+    - 'revive'
+    - 'stylecheck'
+    - 'varnamelen'
+    - 'wrapcheck'
+    - 'wsl'
+
+    # Deprecated
     - 'deadcode'
-    - 'errcheck'
-    - 'errorlint'
-    - 'gofmt'
-    - 'gosimple'
-    - 'govet'
-    - 'ineffassign'
-    - 'makezero'
-    - 'misspell'
-    - 'nakedret'
-    - 'nilerr'
-    - 'staticcheck'
+    - 'exhaustivestruct'
+    - 'golint'
+    - 'ifshort'
+    - 'interfacer'
+    - 'maligned'
+    - 'nosnakecase'
+    - 'scopelint'
     - 'structcheck'
-    - 'unconvert'
-    - 'unparam'
-    - 'unused'
     - 'varcheck'
