--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -8,6 +8,7 @@ linters:
     # Temporary
     - 'cyclop'
     - 'dupl'
+    - 'err113'
     - 'exhaustruct'
     - 'forbidigo'
     - 'funlen'
@@ -17,14 +18,14 @@ linters:
     - 'gocritic'
     - 'gocyclo'
     - 'godox'
-    - 'goerr113'
-    - 'gomnd'
     - 'gosec'
     - 'lll'
     - 'maintidx'
+    - 'mnd'
     - 'nestif'
     - 'nlreturn'
     - 'paralleltest'
+    - 'perfsprint'
     - 'revive'
     - 'stylecheck'
     - 'varnamelen'
@@ -32,13 +33,4 @@ linters:
     - 'wsl'
 
     # Deprecated
-    - 'deadcode'
-    - 'exhaustivestruct'
-    - 'golint'
-    - 'ifshort'
-    - 'interfacer'
-    - 'maligned'
-    - 'nosnakecase'
-    - 'scopelint'
-    - 'structcheck'
-    - 'varcheck'
+    - 'exportloopref'
